--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
                     <li>Çikolatayı kalıptan çıkartın. Kare parçalara bölün</li>
                 </ol>
         </article>
+        <!--   Article - End    -->
     </section>
+    <!--   Content - End    --> 
+     <!--   Footer - Start    -->
     <footer>
         <p align="right"> <u>Afiyet olsun</u></p>
         </footer>
+         <!--   Footer - End    -->
 </body>
 </html>
