--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta Tarifleri</title>
 </head>
-<body bgcolor="#FFFFCC">
+<body style="background:#FFFFCC">
     <!-- navbar start-->
     <header>
         <nav>
@@ -15,7 +15,7 @@
     
         </nav>
     </header>
-    <!-- navbar end-->
+    <!-- navbar end #FFFFCC-->
 
     <!--content start-->
     <section>
